--- a/TODO.org
+++ b/TODO.org
@@ -1,16 +1,22 @@
-* DONE list/search events
-* DONE add/remove events
-** TODO support more options in creating events, e.g. event duration
-* DONE edit events
-* TODO diagnose events failing to parse
-* TODO timezones
-timerer
-* TODO [[https://github.com/robur-coop/icalendar/pull/13][handle RECURRENCE-ID]]
-* TODO CalDAV syncing
-Currently, you can use [[https://github.com/pimutils/vdirsyncer][vdirsyncer]]
-* TODO support a DSL of date queries (e.g. query for every event on a Monday)
-* TODO support querying times as well as dates
-* TODO custom date/time formatting
-* TODO support querying regex
-* TODO server mode
-and maybe hold =Event='s in-memory in a =Collection= instead of parsing them for every =Query=
+- [x] list/search events
+- [x] add/remove events
+- [x] edit events
+- [x] timezones
+- [ ] really stress test the timezone handling -- this is full of gotcha's
+- [ ] don't load all calendars into memory to show only one event
+- [ ] support specifying duration
+- [ ] make query filter a lambda
+- [ ] diagnose events failing to parse
+- [ ] [[https://github.com/robur-coop/icalendar/pull/13][handle RECURRENCE-ID]]
+- [ ] CalDAV syncing
+  - Currently, you can use [[https://github.com/pimutils/vdirsyncer][vdirsyncer]]
+- [ ] support querying times as well as dates
+- [ ] custom date/time formatting
+- [ ] support querying regex
+- [ ] support VALARMS
+- [ ] support VOTODS
+- [ ] support VCARDS
+- [ ] server mode
+  - and maybe hold =Event='s in-memory in a =Collection= instead of parsing them for every =Query=
+- [ ] implement TUI front end with something like [[https://github.com/leostera/minttea][minttea]]
+- [ ] implement an emacs client like mu4e
