--- a/TODO.org
+++ b/TODO.org
@@ -2,6 +2,7 @@
 - [x] add/remove events
 - [x] edit events
 - [x] timezones
+- [ ] allow editting recurrence-ids
 - [ ] really stress test the timezone handling -- this is full of gotcha's
 - [ ] don't load all calendars into memory to show only one event
 - [ ] support specifying duration
