--- a/TODO.org
+++ b/TODO.org
@@ -8,10 +8,9 @@
 - [ ] don't load all calendars into memory to show only one event
 - [ ] support specifying duration
 - [ ] better add/edit event datetime parsing
-- [ ] diagnose events failing to parse
-  - [[https://github.com/robur-coop/icalendar/issues/14]]
-- [ ] [[https://github.com/robur-coop/icalendar/pull/13][handle RECURRENCE-ID]]
-- [ ] [[https://github.com/robur-coop/icalendar/issues/15][RRULE with local datetime]]
+- [x] diagnose events failing to parse [[https://github.com/robur-coop/icalendar/issues/14]]
+- [x] [[https://github.com/robur-coop/icalendar/pull/13][handle RECURRENCE-ID]]
+- [x] [[https://github.com/robur-coop/icalendar/issues/15][RRULE with local datetime]]
 - [ ] CalDAV syncing
   - Currently, you can use [[https://github.com/pimutils/vdirsyncer][vdirsyncer]]
 - [ ] support querying times as well as dates
@@ -24,5 +23,5 @@
 - [ ] server mode
   - and maybe hold =Event='s in-memory instead of parsing them for every =Query=
 - [ ] implement TUI front end with something like [[https://github.com/leostera/minttea][minttea]]
-- [ ] implement an emacs client like mu4e
+- [ ] implement an emacs front end, like mu4e to mu
 - [ ] parallel queries
