--- a/TODO.org
+++ b/TODO.org
@@ -8,6 +8,9 @@
 - [ ] don't load all calendars into memory to show only one event
 - [ ] support specifying duration
 - [ ] better add/edit event datetime parsing
+  - day of the week
+  - month names
+  - allow editting date or time without touching the other
 - [x] diagnose events failing to parse [[https://github.com/robur-coop/icalendar/issues/14]]
 - [x] [[https://github.com/robur-coop/icalendar/pull/13][handle RECURRENCE-ID]]
 - [x] [[https://github.com/robur-coop/icalendar/issues/15][RRULE with local datetime]]
