--- a/TODO.org
+++ b/TODO.org
@@ -4,6 +4,7 @@
 - [x] timezones
 - [x] remove collection module
   - ref [[https://github.com/ocaml-ppx/ppxlib/issues/481]] cc patrick
+- [ ] add timezone to call date functions and make it required
 - [ ] allow editing recurrence-ids
 - [ ] don't load all calendars into memory to show only one event
 - [ ] support specifying duration
@@ -11,6 +12,7 @@
   - day of the week
   - month names
   - allow editting date or time without touching the other
+  - NB in emacs we use org-mode's datetime picker
 - [x] diagnose events failing to parse [[https://github.com/robur-coop/icalendar/issues/14]]
 - [x] [[https://github.com/robur-coop/icalendar/pull/13][handle RECURRENCE-ID]]
 - [x] [[https://github.com/robur-coop/icalendar/issues/15][RRULE with local datetime]]
@@ -23,8 +25,16 @@
 - [ ] support VALARMS
 - [ ] support VOTODS
 - [ ] support VCARDS
-- [ ] server mode
-  - and maybe hold =Event='s in-memory instead of parsing them for every =Query=
+- [x] server mode
+  - [x] hold =Event='s in-memory instead of parsing them for every =Query=
 - [ ] implement TUI front end with something like [[https://github.com/leostera/minttea][minttea]]
 - [ ] implement an emacs front end, like mu4e to mu
-- [ ] parallel queries
+  - [x] listing, searching, querying
+  - [x] show details
+  - [x] show file
+  - [x] refresh
+  - [x] list possible calendars
+  - [x] add functions and bindings to change query parameters on the fly
+  - [ ] timezone support
+    - [ ] check the date module
+  - [ ] support adding, deleting, and editing events
