--- a/TODO.org
+++ b/TODO.org
@@ -39,3 +39,4 @@
     - [ ] check the date module
   - [ ] support adding, deleting, and editing events
   - [ ] don't print end date if it's the same as the start date (will require a different sort function)
+  - [ ] add a org-agenda style view for caledonia-list
