--- a/TODO.org
+++ b/TODO.org
@@ -2,31 +2,23 @@
 - [x] add/remove events
 - [x] edit events
 - [x] timezones
-- [x] remove collection module
-  - ref [[https://github.com/ocaml-ppx/ppxlib/issues/481]] cc patrick
-- [ ] add timezone to call date functions and make it required
-- [ ] allow editing recurrence-ids
-- [ ] don't load all calendars into memory to show only one event
-- [ ] support specifying duration
-- [ ] better add/edit event datetime parsing
-  - day of the week
-  - month names
-  - allow editting date or time without touching the other
-  - NB in emacs we use org-mode's datetime picker
 - [x] diagnose events failing to parse [[https://github.com/robur-coop/icalendar/issues/14]]
 - [x] [[https://github.com/robur-coop/icalendar/pull/13][handle RECURRENCE-ID]]
 - [x] [[https://github.com/robur-coop/icalendar/issues/15][RRULE with local datetime]]
+- [x] server mode
+- [x] hold =Event='s in-memory instead of parsing them for every =Query=
+- [ ] add timezone all date functions
+- [ ] allow editing recurrence-ids
+- [ ] support specifying duration
 - [ ] CalDAV syncing
-  - Currently, you can use [[https://github.com/pimutils/vdirsyncer][vdirsyncer]]
-- [ ] support querying times as well as dates
+- [ ] support complex datetime queries
 - [ ] custom date/time formatting
-- [ ] support querying regex
+- [ ] support querying text with regex
 - [ ] support VTIMEZONE
 - [ ] support VALARMS
 - [ ] support VOTODS
 - [ ] support VCARDS
-- [x] server mode
-  - [x] hold =Event='s in-memory instead of parsing them for every =Query=
+- [ ] support VJOURNAL
 - [ ] implement TUI front end with something like [[https://github.com/leostera/minttea][minttea]]
 - [ ] implement an emacs front end, like mu4e to mu
   - [x] listing, searching, querying
@@ -36,7 +28,5 @@
   - [x] list possible calendars
   - [x] add functions and bindings to change query parameters on the fly
   - [ ] timezone support
-    - [ ] check the date module
   - [ ] support adding, deleting, and editing events
-  - [ ] don't print end date if it's the same as the start date (will require a different sort function)
   - [ ] add a org-agenda style view for caledonia-list
